[package]
name = "cuda-sys"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
links = "cuda"

[lib]
doctest = false

[features]
default = []

ffi = ["bindgen", "regex"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.71.1", optional = true }
regex = { version = "1", optional = true }
