[package]
name = "cuda"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cuda-sys = { workspace = true }

bitflags = { version = "2.9.0" }
uuid = { version = "1.16.0" }

log = { version = "0.4.27" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_Security"] }